# DoubleZeta

./: .gitignore  Algebra.h  Algebra.tpp  CMakeLists.txt  DTypes.h  Job.h  Job.tpp  README.md  ZetaSession.cpp  algebra.cpp  pyproject.toml  setup.py
docs/: floating_point_notes.md  unittest_instructions.md
examples/: ZetaSession.test.cpp  main.cpp  optimization.cpp  simple_dw.cpp
examples/benchmark/: README.md  mat_add.cpp  mat_mul.cpp  mat_mul.py  mat_mul_c.cpp  mat_sub.cpp  parallel_math.cpp  times.txt
src/: CMakeLists.txt
src/algba_cmd/: Algebra.h  Algebra.tpp
src/double_word/: bsc_core.h  dw.cpp  dw.h  dw_consts.cpp
src/doublezeta/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  __init__.py  matrix_cpy.cpp
src/doublezeta/config/: settings.h
src/doublezeta/double_word/: dw.cpp  dw.h  dw_consts.cpp  fpu_fix.cpp  fpu_fix.h
src/doublezeta/optimizer/: .GradientDescent.h.swp  GradientDescent.cpp  GradientDescent.h
src/doublezeta/regression/: Linear.cpp  Linear.h  Regression.cpp
src/doublezeta/threadpool/: Algebra.tpp  Job.h  Job.tpp  ZetaSession.h  ZetaSession.tpp
src/doublezeta/typing/: Array.h  Cube.h  Cube.tpp  DTypes.h  Matrix.h  Matrix.tpp  exceptions.cpp  exceptions.h
src/doublezeta/utils/: _float_hlpr.cpp  _float_hlpr.h
src/optimizer/: GradientDescent.cpp  GradientDescent.h
src/regression/: Linear.cpp  Linear.h  Linear.tpp  Regression.cpp  Regression.h
src/threadpool/: Job.h  Job.tpp  ZetaSession.cpp  ZetaSession.h  ZetaSession.tpp
src/typing/: DTypes.h  Matrix.cpp  Matrix.h  exceptions.cpp  exceptions.h
tests/: Linear.test.cpp  ZetaSession.test.cpp  bsc_core.test.cpp  cube.test.cpp  dw.test.cpp  gradientdescent.test.cpp  job.test.cpp  matrix.test.cpp  regression.test.cpp  temp.test.cpp  zetasession.test.cpp
tests/integration/: LinearRegression.test.cpp
